Bootstrap added. Added CC.

--- a/CC.html
+++ b/CC.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-	<title>Joel Groff - Contact</title>
+	<title>Joel Groff - Crystals and Curses</title>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="css/styles.css?v=1.0">
@@ -10,10 +10,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link rel="stylesheet" type="text/css" href="mystyle2.css">
-
-	<style type="text/css">
-		body{background-color:#C3F7FF;}
-	</style>
 </head>
 
 <body>
@@ -45,41 +41,53 @@
         </div>
 		<div class="row headerOne thickPad">
             <div class="col-sm-12 text-center">
-                Contact
+                Crystals and Curses
             </div>
         </div>
 		<div class="row thinPad">
 			<div class="col-sm-offset-4 col-sm-4 text-center textTwo">
-				<p>
-					Please contact me at <strong>GroffJoel@gmail.com</strong> if you would like to learn more about my
-					new game <a href="twitter.com/@leapdoctorgames">Crystals and Curses</a>, my experience,
-					 or how I could help your organization with its next project.
-				</p>
-				<p>
-					I would love to hear from you!
-				</p>
+                I am the designer and one of two programmers developing Cyrstals and Curses.
+                Our team, Leap Doctor Games, believes that games have the ability to enrich people's lives.
+                They are the perfect blend of visual art, story, sound design, problem-solving, and fun.
+                <br/><br/>Crystals and Curses respects players' intelligence with challening, ever changing puzzles.
+                I hope you love it as much as we do.
+                You can follow our development on twitter:<br/>
+                <a href="twitter.com/@LeapDoctorGames" style="font-size:25px">@LeapDoctorGames.</a>
+			</div>
+        </div>
+        <div class="row thickPad">
+			<div class="col-sm-offset-1 col-sm-10">
+				<img class="img-responsive" src="W2P2.png" />
 			</div>
 		</div>
-		<div class="row thinPad">
-			<div class="col-sm-offset-2 col-sm-8 text-center textTwo">
-					<img src="EmailIcon.png" height="40px;" />
-					<span class="headerOne">GroffJoel@gmail.com</span>
+        <div class="row thickPad">
+			<div class="col-sm-offset-4 col-sm-4 text-center textTwo">
+                Players break curses by connecting crystals, turning them all white as they go from
+                start to finish. As designer, I focused on progressing gameplay in the same way that
+                story progresses. Players will continuously discover and utilize new mechanics as puzzles
+                become more difficult and complex.
 			</div>
 		</div>
-		<div class="row thinPad">
-			<div class="col-sm-offset-2 col-sm-8 text-center textTwo">
-					<a href="https://www.linkedin.com/in/joel-groff-97b798138/">
-						<img src="LinkedInIcon.png" height="40px;" />
-						<span class="headerOne">Linkedin</span>
-					</a>
+        <div class="row thickPad">
+            <div class="col-sm-offset-1 col-sm-10">
+				<img class="img-responsive" src="W5P1.png" />
+			</div>
+        </div>
+        <div class="row thickPad">
+			<div class="col-sm-offset-4 col-sm-4  text-center textTwo">
+                Crystals and Curses is more than a series of puzzles. It has fast-paced boss battles,
+                gambling lobsters, riddles, inhabited suits of armor,
+                and...secrets.
+			</div>
+        </div>
+        <div class="row thinPad">
+			<div class="col-sm-offset-4 col-sm-4">
+				<img class="img-responsive" src="oldman-wip2.gif" />
 			</div>
 		</div>
-		<div class="row thinPad">
-			<div class="col-sm-offset-2 col-sm-8 text-center textTwo">
-					<a href="https://twitter.com/IAmJoelGroff">
-						<img src="TwitterLogo.png" height="40px;" />
-						<span class="headerOne">Twitter</span>
-					</a>
+        <div class="row thickPad">
+			<div class="col-sm-offset-1 col-sm-10">
+				<img class="img-responsive" src="WORLD3.jpeg" />
 			</div>
 		</div>
 		<div class="row thickPad textTwo text-center">
@@ -98,5 +106,6 @@
 		<div id="home_text" class="home_menu"><strong>H</strong></div>
 	</div>
 	<script src="main.js"> </script>
+
 </body>
 </html>
