--- a/about.html
+++ b/about.html
@@ -2,95 +2,106 @@
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
-	<style type="text/css">
-		body{background-color:white;}
-		.container{background-color:white;}
-		.menu_div a:hover{color:#E4E4E4;}
-		.menu_div a:visited:hover {color:#E4E4E4;}
-	</style>
 	<title>Joel Groff - About</title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="mystyle2.css">
 </head>
 
 <body>
-	
-	<div class="container center_div">
-		<div class="menu_div"> 
-			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp; 
-			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;  
-			<a href="contact.html">CONTACT</a>
-		</div>
-		<div class="column_container_two center_div times_font grey_text">
-			<div class="column_two">	
-				<div class="project_column">
-					<span class="header">ABOUT</span>
-					<p>
-						I'm a full-time student at the University of South Florida 
-						pursuing a BS in Computer Science. 
-						I've achieved a 4.0 into my third year.
-					</p>
-					<p> 
-						Two years before attending USF, I picked up as many books as I
-						 could manage and taught myself to code.
-					</p>
-					<p>
-						I've always been drawn to video games as they are the crossroads of multiple art forms 
-						like story, music, sound, animation, and visual art. Games allow us to slay dragons,
-						dog-fight in space, and challenge our minds with complex puzzles. They tell stories
-						of life and death, mistakes, love, and friendship.
-					</p>
-					<p>
-						Outside of class, I have invested my free time creating games and other software, 
-						some of which I have included here. 
-					</p>
-					<p>
-						I hope you enjoy!
- 					</p>
-					<p>
-					<strong>
-						My skills include:
-					</p>
-					<p>
-						C <br />C# <br />C++<br />html<br />CSS
-					</p>
-					<p>
-						Photoshop<br />Unity<br />Blender
-					</strong>
-					</p>
-					<p>
-						I am interested in software and game development internships this coming Summer 
-						2017 and will enter the job market after graduation in May 2018.
-					</p>
-					<p>
-						Please contact me at <strong>groffjoel@gmail.com</strong> 
-						if you would like to learn more about my 
-						experience or how I could help your organization with its next project.
-					</p>
-				</div>
+	<div id="mainContainer" class="col-sm-offset-1 col-sm-10">
+        <div class="row thinPad">
+            <div class="col-sm-4">
+                <a href="https://twitter.com/IAmJoelGroff">
+                    <img id="twitterIcon"  src="TwitterLogo.png" height="40px;" />&emsp;
+                </a>
+                <a href="https://www.linkedin.com/in/joel-groff-97b798138/">
+                    <img id="linkedInIcon"  src="LinkedInIcon.png" height="40px;" />
+                </a>
+            </div>
+            <div class="col-sm-4 text-center headerOne">
+                JOEL GROFF
+            </div>
+            <div class="col-sm-4">
+                <div class="col-sm-12 text-right menu_div">
+                    <a href="about.html">ABOUT</a>&emsp;|&emsp;
+                    <a href="resume.html">RESUME</a>&emsp;|&emsp;
+                    <a href="contact.html">CONTACT</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center textOne">
+                Game Designer. Programmer. Gamer. Human.
+            </div>
+        </div>
+		<div class="row headerOne thickPad">
+            <div class="col-sm-12">
+                About
+            </div>
+        </div>
+		<div class="row thinPad">
+			<div class="col-sm-6 textTwo">
+				<p>
+					I'm a full-time student at the University of South Florida
+					pursuing a BS in Computer Science. My team at Leap Doctor Games
+					is currently developing a puzzle game - Crystals and Curses.
+					<a href="twitter.com/@leapdoctorgames">Follow us here.</a>
+				</p>
+				<p>
+					I've always been drawn to video games as they are the crossroads of multiple art forms
+					like story, music, sound, animation, and visual art. Games allow us to slay dragons,
+					dog-fight in space, and challenge our minds with complex puzzles. They tell stories
+					of life and death, mistakes, love, and friendship.
+				</p>
+				<p>
+					Outside of class, I have invested my free time creating games and other software,
+					some of which I have included here.
+				</p>
+				<p>
+					I hope you enjoy!
+				</p>
+				<p>
+				<strong>
+					My skills include:
+				</p>
+				<p>
+					C <br />C# <br />C++<br />Python<br />html<br />CSS
+				</p>
+				<p>
+					Photoshop<br />Unity<br />Blender<br />Git
+				</strong>
+				</p>
+				<p>
+					Please contact me at <strong>groffjoel@gmail.com</strong>
+					if you would like to learn more about my
+					experience or how I could help your organization with its next project.
+				</p>
 			</div>
-			<div class="column_two">
-				<img id="portrait"  src="self_portrait.jpg" height="600px"/>
-			</div>	
-		</div>
+            <div class="col-sm-6">
+                    <img id="portrait" class="img-responsive" src="self_portrait.jpg" />
+            </div>
+        </div>
+		<div class="row thickPad textOne text-center">
+            Copyright Joel Groff 2017
+        </div>
 	</div>
-	<div id="footer">
-			Copyright 2017&emsp;|&emsp;Site built by Joel Groff
-	</div>
-	<!-- SUN MENU -->
- 	<div class="home_menu">
-		<img id="menu_img_back" src="Sun_Menu.png" height="40" width="40"/>
-	</div>
-	<div class="home_menu">
-		<a href="index.html" title="Home">
-			<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
-		</a>
-	
-		<div id="home_text_shadow" class="home_menu"><strong>H</strong></div>
-		<div id="home_text" class="home_menu"><strong>H</strong></div>
-	</div>
-	<script src="main.js"> </script>
+
+<!-- SUN MENU -->
+<div class="home_menu">
+	<img id="menu_img_back" src="Sun_Menu.png" height="40" width="40"/>
+</div>
+<div class="home_menu">
+	<a href="index.html" title="Home">
+		<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
+	</a>
+	<div id="home_text" class="home_menu"><strong>H</strong></div>
+</div>
+<script src="main.js"> </script>
 
 </body>
-
-
 </html>
