--- a/gamejam.html
+++ b/gamejam.html
@@ -2,79 +2,90 @@
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
-	<style type="text/css">
-		.column_two
-		{
-			padding:15px 0 15px 0;
-			float:left;
-			width:40%;
-		}
-		.column_three
-		{
-			padding:15px 0 15px 0;
-			float:left;
-			width:60%;
-		}
-		.column_container_two{width:1100px;}
-		body{background-color:white;}
-		.container{background-color:white;}
-		.menu_div a:hover{color:#E4E4E4;}
-		.menu_div a:visited:hover {color:#E4E4E4;}
-	</style>
 	<title>Joel Groff - Game Jam</title>
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/styles.css?v=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="mystyle2.css">
 </head>
 
 <body>
-	<div class="container center_div">
-		<div class="menu_div">
-			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp;
-			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;
-			<a href="contact.html">CONTACT</a>
-		</div>
-		<div class="column_container_two center_div times_font grey_text">
-			<div class="column_two">
-				<div class="project_column">
-					<span class="header">GAME JAM 2016</span>
-					<p><strong>DIRECTIONS</strong>
-					<br />1. Let game finish loading in your browser
-					<br />2. Click game
-					<br />3. Press space to start
-					<br />4. Use arrows to move
-					</p>
-					<p> <strong>GOAL</strong>
-						<br /> Build a fun game within a time limit!
-					</p>
-					<p><strong>OVERVIEW</strong>
-					<br /> The USF Game Development Club hosted a game jam in fall of 2016.
-					Participants had eight hours to finish their game and were judged
-					based on UI design, sound, fun, and polish.
-
-					<p>Unfortunately, due to work and travel I was only able to
-					participate in the last hour of the jam.
-					My final game, where players control a square struggling to
-					survive an onslaught of other squares, was entirely created within
-					that hour.
-					</p>
-					</p>
-
-					<p><strong>TOOLS</strong>
-						<br />Unity
-						<br />C#
-					</p>
-					<p><strong>EXPERIENCE</strong>
-						<br />Coding as fast as possible for one hour
-					</p>
+	<div id="mainContainer" class="col-sm-offset-1 col-sm-10">
+		<div class="row thinPad">
+			<div class="col-sm-4">
+				<a href="https://twitter.com/IAmJoelGroff">
+					<img id="twitterIcon"  src="TwitterLogo.png" height="40px;" />&emsp;
+				</a>
+				<a href="https://www.linkedin.com/in/joel-groff-97b798138/">
+					<img id="linkedInIcon"  src="LinkedInIcon.png" height="40px;" />
+				</a>
+			</div>
+			<div class="col-sm-4 text-center headerOne">
+				JOEL GROFF
+			</div>
+			<div class="col-sm-4">
+				<div class="col-sm-12 text-right menu_div">
+					<a href="about.html">ABOUT</a>&emsp;|&emsp;
+					<a href="resume.html">RESUME</a>&emsp;|&emsp;
+					<a href="contact.html">CONTACT</a>
 				</div>
 			</div>
-			<div class="column_three">
+		</div>
+		<div class="row">
+			<div class="col-sm-12 text-center textOne">
+				Game Designer. Programmer. Gamer. Human.
+			</div>
+		</div>
+		<div class="row headerOne thickPad">
+			<div class="col-sm-12">
+				USF 2016 Game Jam
+			</div>
+		</div>
+		<div class="row thinPad">
+			<div class="col-sm-6 textTwo">
+				<p><strong>DIRECTIONS</strong>
+				<br />1. Let game finish loading in your browser
+				<br />2. Click game
+				<br />3. Press space to start
+				<br />4. Use arrows to move
+				</p>
+				<p> <strong>GOAL</strong>
+					<br /> Build a fun game in an hour!
+				</p>
+				<p><strong>OVERVIEW</strong>
+				<br /> The USF Game Development Club hosted a game jam in fall of 2016.
+				Participants had eight hours to finish their game and were judged
+				based on UI design, sound, fun, and polish.
+
+				<p>Unfortunately, due to work and travel I was only able to
+				participate in the last hour of the jam.
+				My final game, where players control a square struggling to
+				survive an onslaught of other squares, was entirely created within
+				that hour.
+				</p>
+				</p>
+
+				<p><strong>TOOLS</strong>
+					<br />Unity
+					<br />C#
+				</p>
+				<p><strong>EXPERIENCE</strong>
+					<br />Coding as fast as possible for one hour
+				</p>
+			</div>
+			<div class="col-sm-6 textTwo">
 				<iframe src="Jam\index.html" width="600px" height="500px"></iframe>
 			</div>
 		</div>
+		<div class="row thickPad textTwo text-center">
+            Copyright Joel Groff 2017
+        </div>
 	</div>
-	<div id="footer">
-			Copyright 2017&emsp;|&emsp;Site built by Joel Groff
-	</div>
+
 	<!-- SUN MENU -->
 	<div class="home_menu">
 		<img id="menu_img_back" src="Sun_Menu.png" height="40" width="40"/>
@@ -83,14 +94,8 @@
 		<a href="index.html" title="Home">
 			<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
 		</a>
-
-	<div id="home_text_shadow" class="home_menu"><strong>H</strong></div>
-	<div id="home_text" class="home_menu"><strong>H</strong></div>
+		<div id="home_text" class="home_menu"><strong>H</strong></div>
 	</div>
 	<script src="main.js"> </script>
-
-
 </body>
-
-
 </html>
