--- a/resume.html
+++ b/resume.html
@@ -2,20 +2,102 @@
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<title>Joel Groff - Resume</title>
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="mystyle2.css">
 	<style type="text/css">
 		body{background-color:#C7FFF1;}
-		.container{background-color:#C7FFF1; height:1340px;}
-		#resume_game{width:620px; height:640px; position:relative; padding:20px 0 0 65px; text-align:center;}
 	</style>
-	<title>Joel Groff - Resume</title>
 </head>
 
 <body>
+	<div id="mainContainer" class="col-sm-offset-1 col-sm-10">
+        <div class="row thinPad">
+            <div class="col-sm-4">
+                <a href="https://twitter.com/IAmJoelGroff">
+                    <img id="twitterIcon"  src="TwitterLogo.png" height="40px;" />&emsp;
+                </a>
+                <a href="https://www.linkedin.com/in/joel-groff-97b798138/">
+                    <img id="linkedInIcon"  src="LinkedInIcon.png" height="40px;" />
+                </a>
+            </div>
+            <div class="col-sm-4 text-center headerOne">
+                JOEL GROFF
+            </div>
+            <div class="col-sm-4">
+                <div class="col-sm-12 text-right menu_div">
+                    <a href="about.html">ABOUT</a>&emsp;|&emsp;
+                    <a href="resume.html">RESUME</a>&emsp;|&emsp;
+                    <a href="contact.html">CONTACT</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center textOne">
+                Game Designer. Programmer. Gamer. Human.
+            </div>
+        </div>
+		<div class="row headerOne thickPad">
+            <div class="col-sm-offset-2 col-sm-8 text-center">
+                RESUME
+            </div>
+        </div>
+		<div class="row thinPad">
+			<div class="col-sm-offset-2 col-sm-8 text-center">
+				<iframe src="Resume_Build\index.html" width="610px" height="610px"></iframe>
+			</div>
+		</div>
+		<div class="row thinPad textTwo">
+			<div class="col-sm-offset-3 col-sm-6">
+				<strong>DIRECTIONS</strong>
+				<br />1. Wait until game is loaded in browser
+				<br />2. Click game
+				<br />3. Press "m" to mute/unmute
+				<br />4. Move with arrows
+				<br />5. Select/Shoot with "space"
+				<br />6. "Esc" to return to main menu
+				<p>
+					<strong>OVERVIEW</strong>
+					<br />I turned my resume into a video game! It will only require 2 minutes to play.
+					For the sake of time, a few details have been left out of the game version; however, my complete
+					resume PDF can be viewed below. Special thanks to Mostafa Emara for creating the music.
+				</p>
+				<p>
+					<strong>TOOLS</strong>
+					<br />Unity
+					<br />Photoshop
+					<br />C#
+				</p>
+				<p>
+					<strong>EMAIL AND PDF</strong>
+					<br />I would love to hear from you!
+					You can email me at <strong>GroffJoel@gmail.com</strong>.
+					You can also view or download my resume PDF with the buttons below. Safari users may have to alt+click to download the file.
+				</p>
+					<div class="button_div">
+						<a href="JoelGroffCSResume.pdf">VIEW RESUME PDF</a>
+					</div>
+				<p>
+					<div class="button_div">
+						<a href="JoelGroffCSResume.pdf" download>DOWNLOAD RESUME PDF</a>
+					</div>
+				</p>
+			</div>
+		</div>
+		<div class="row thickPad textTwo text-center">
+            Copyright Joel Groff 2017
+        </div>
+	</div>
+
+	<!--
 	<div class="container center_div">
 		<div class="menu_div">
-			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp; 
-			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;  
+			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp;
+			<a href="resume.html">RESUME</a>&emsp;&emsp;|&emsp;&emsp;
 			<a href="contact.html">CONTACT</a>
 		</div>
 		<div id="resume_game" class="center_div times_font grey_text">
@@ -35,7 +117,7 @@
 				<br />I turned my resume into a video game! It will only require 2 minutes to play.
 				For the sake of time, a few details have been left out of the game version; however, my complete
 				resume PDF can be viewed below. Special thanks to Mostafa Emara for creating the music.
-			</p>	
+			</p>
 			<p>
 				<strong>TOOLS</strong>
 				<br />Unity
@@ -44,9 +126,9 @@
 			</p>
 			<p>
 				<strong>EMAIL AND PDF</strong>
-				<br />I would love to hear from you! 
+				<br />I would love to hear from you!
 				You can email me at <strong>GroffJoel@gmail.com</strong>.
-				You can also view or download my resume PDF with the buttons below. Safari users may have to alt+click to download the file. 
+				You can also view or download my resume PDF with the buttons below. Safari users may have to alt+click to download the file.
 			</p>
 				<div class="button_div">
 					<a href="JoelGroffCSResume.pdf">VIEW RESUME PDF</a>
@@ -56,13 +138,13 @@
 					<a href="JoelGroffCSResume.pdf" download>DOWNLOAD RESUME PDF</a>
 				</div>
 			</p>
-			
+
 		</div>
 	</div>
 	<div id="footer">
 			Copyright 2017&emsp;|&emsp;Site built by Joel Groff
 	</div>
-
+-->
 	<!-- SUN MENU -->
 	<div class="home_menu">
 		<img id="menu_img_back" src="Sun_Menu.png" height="40" width="40"/>
@@ -71,8 +153,6 @@
 		<a href="index.html" title="Home">
 			<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
 		</a>
-	
-		<div id="home_text_shadow" class="home_menu"><strong>H</strong></div>
 		<div id="home_text" class="home_menu"><strong>H</strong></div>
 	</div>
 	<script src="main.js"> </script>
