--- a/western.html
+++ b/western.html
@@ -2,18 +2,119 @@
 
 <html>
 <head>
+	<title>Joel Groff - Sci-fi Western</title>
 	<link rel="stylesheet" type="text/css" href="mystyle.css">
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="css/styles.css?v=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="mystyle2.css">
+
 	<style type="text/css">
 		body{background-color:#FFFFCC;}
 		.container{background-color:#FFFFCC;}
-		.column_container_two{width:1100px;}
-		.column_two {width:40%;}
-		.column_three {width:60%;}
 	</style>
-	<title>Joel Groff - Sci-fi Western</title>
 </head>
 
 <body>
+	<div id="mainContainer" class="col-sm-offset-1 col-sm-10">
+        <div class="row thinPad">
+            <div class="col-sm-4">
+                <a href="https://twitter.com/IAmJoelGroff">
+                    <img id="twitterIcon"  src="TwitterLogo.png" height="40px;" />&emsp;
+                </a>
+                <a href="https://www.linkedin.com/in/joel-groff-97b798138/">
+                    <img id="linkedInIcon"  src="LinkedInIcon.png" height="40px;" />
+                </a>
+            </div>
+            <div class="col-sm-4 text-center headerOne">
+                JOEL GROFF
+            </div>
+            <div class="col-sm-4">
+                <div class="col-sm-12 text-right menu_div">
+                    <a href="about.html">ABOUT</a>&emsp;|&emsp;
+                    <a href="resume.html">RESUME</a>&emsp;|&emsp;
+                    <a href="contact.html">CONTACT</a>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 text-center textOne">
+                Game Designer. Programmer. Gamer. Human.
+            </div>
+        </div>
+		<div class="row headerOne thickPad">
+            <div class="col-sm-12">
+                Sci-fi Western
+            </div>
+        </div>
+		<div class="row thinPad">
+			<div class="col-sm-6 textTwo">
+				<p> <strong>GOAL</strong>
+					<br /> Explore 3D space, 3D collisions, animation, and basic enemy AI.
+				</p>
+				<p><strong>OVERVIEW</strong>
+					<br /> This project is a full 3D level, where the player battles an ancient robot.
+					Finite state machines manage the player's actions, including sword attacks,
+					movement, charging and firing a laser pistol, and dodging.
+				</p>
+				<p>
+					Spheres are used to detect character overlap with other colliders.
+					To resolve collisions, the game calculates an appropriate resolution point and pushes the player
+					out of the overlapped object.
+				</p>
+				<p>
+					The collision system limits the angle of slopes the player may
+					traverse. Moreover, players "stick" to the ground when descending a slope.
+					Special thanks to Erik Ross, whose character controller laid the groundwork for my
+					collision resolution.
+				</p>
+				<p>
+					The robot's AI is controlled by a finite state machine and makes
+					decisions based on player location.
+					I introduced a random element to the AI's decisions to
+					provide a sense of surprise every battle.
+					Hitting the arms or chest damages the boss.
+				</p>
+				<p>
+					I created and animated all 3D models in Blender.
+				</p>
+				<p><strong>TOOLS</strong>
+					<br />Unity
+					<br />C#
+					<br />Blender
+					<br />Photoshop
+				</p>
+				<p><strong>EXPERIENCE</strong>
+					<br />3D collision resolution
+					<br />Enemy AI
+					<br />3D modeling and animation
+					<br />State machine character control
+					<br />Saving and loading player data
+
+				</p>
+			</div>
+			<div class="col-sm-6 textTwo">
+				<div class="row">
+					<img  src="laser.png" class="img-responsive" />
+				</div>
+				<div class="row thinPad">
+					<img src="hand.png" class="img-responsive" />
+				</div>
+				<div class="row thinPad">
+					<img  src="circles.png" class="img-responsive" />
+				</div>
+				<div class="row thinPad">
+					<img src="sword.png" class="img-responsive" />
+				</div>
+			</div>
+		</div>
+		<div class="row thickPad textTwo text-center">
+            Copyright Joel Groff 2017
+        </div>
+	</div>
+	<!--
 	<div class="container center_div">
 		<div class="menu_div">
 			<a href="about.html">ABOUT</a>&emsp;&emsp;| &emsp;&emsp;
@@ -84,6 +185,7 @@
 	<div id="footer">
 			Copyright 2017&emsp;|&emsp;Site built by Joel Groff
 	</div>
+-->
 	<!-- SUN MENU -->
 	<div class="home_menu">
 		<img id="menu_img_back" src="Sun_Menu.png" height="40" width="40"/>
@@ -92,9 +194,7 @@
 		<a href="index.html" title="Home">
 			<img id="menu_img" src="Sun_Menu.png" height="40" width="40"/>
 		</a>
-
-	<div id="home_text_shadow" class="home_menu"><strong>H</strong></div>
-	<div id="home_text" class="home_menu"><strong>H</strong></div>
+		<div id="home_text" class="home_menu"><strong>H</strong></div>
 	</div>
 	<script src="main.js"> </script>
 
